--- a/view/container.html
+++ b/view/container.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
     <div id="twi-root"><!-- Preact application root container --></div>
