--- a/view/container.html
+++ b/view/container.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link rel="shortcut icon" href="/assets/img/icns/favicon/twi.ico">
   </head>
   <body>
     <div id="twi-root"><!-- Preact application root container --></div>
