Add auto sizable textare. Add OnClickOutside component. Add DescriptionEditor.

--- a/view/container.html
+++ b/view/container.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <div id="twi-root"><!-- Preact application root container --></div>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
   </body>
 </html>
