Tiny fix for container.html

--- a/view/container.html
+++ b/view/container.html
@@ -7,7 +7,12 @@
     <link rel="shortcut icon" href="/assets/img/icns/favicon/twi.ico">
   </head>
   <body>
-    <div id="twi-root"><!-- Preact application root container --></div>
+    <div id="twi-root">
+      <!--
+        Twilight's Library application will appears inside of this container.
+        Do not change or remove this DOM node.
+      -->
+    </div>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
   </body>
