--- a/src/core/base/main.scss
+++ b/src/core/base/main.scss
@@ -5,6 +5,9 @@
 html, body {
   font: 14px Roboto; // stylelint-disable-line
   -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 button, textarea, input {
