--- a/src/core/base/main.scss
+++ b/src/core/base/main.scss
@@ -2,9 +2,14 @@
 
 @use postcss-nested;
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   font: 14px Roboto; // stylelint-disable-line
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
