--- a/src/common/component/SidebarMenu/component/internal/List/menu-list.scss
+++ b/src/common/component/SidebarMenu/component/internal/List/menu-list.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   margin: 0;
   padding: 0;
   list-style: none;
