--- a/src/common/component/SidebarMenu/component/internal/Logo/logo.scss
+++ b/src/common/component/SidebarMenu/component/internal/Logo/logo.scss
@@ -1,25 +1,4 @@
-@use postcss-nested;
-
-.container {
-  /*position: relative; */
-  overflow: hidden;
-  display: flex;
-  width: 100%;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  transition: all 200ms;
-
-  svg {
-    width: 42px;
-    height: 42px;
-  }
-}
-
-.open {
-  justify-content: flex-start;
-
-  svg {
-    width: 42px;
-  }
+.container svg {
+  width: 42px;
+  height: 42px;
 }
