--- a/src/common/component/SidebarMenu/component/internal/Toggler/menu-toggler.scss
+++ b/src/common/component/SidebarMenu/component/internal/Toggler/menu-toggler.scss
@@ -2,17 +2,9 @@
 
 .container {
   display: flex;
-  width: 100%;
-  height: 48px;
   background: transparent;
   color: white;
-  border: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  justify-content: center;
-  align-items: center;
-}
+  padding: 0;
 
   &:disabled {
     background: transparent;
@@ -20,3 +12,4 @@
     border: none;
     cursor: inherit;
   }
+}
