--- a/src/common/component/SidebarMenu/component/public/Element/menu-element.scss
+++ b/src/common/component/SidebarMenu/component/public/Element/menu-element.scss
@@ -1,16 +1,7 @@
 @use postcss-nested;
 
-.container {
-  width: 100%;
-  height: 48px;
-
-  a {
-    display: flex;
-    width: inherit;
-    height: inherit;
-    justify-content: center;
-    align-items: center;
-  }
+.container a {
+  display: flex;
 }
 
 .active {
