--- a/src/common/component/SidebarMenu/sidebar-menu.scss
+++ b/src/common/component/SidebarMenu/sidebar-menu.scss
@@ -47,9 +47,10 @@
   z-index: 1;
 }
 
-@media (max-width: 300px) {
+@media (max-width: 320px) {
   .open, .content {
-    max-width: 300px;
+    width: 320px;
+    max-width: 320px;
   }
 
   .mask {
