--- a/src/module/auth/common/component/Form/Input/input.scss
+++ b/src/module/auth/common/component/Form/Input/input.scss
@@ -1,37 +1,22 @@
 @use postcss-nested;
 
 .container {
-  position: relative;
-  box-sizing: border-box;
-  padding: 10px 0;
-}
+  margin-bottom: 10px;
 
   input {
-    box-sizing: inherit;
     width: 100%;
     padding: 15px 20px;
     border: 1px #d4d4d4 solid;
   }
-
-.warn {
-  display: none;
-  position: absolute;
-  left: 0;
-  bottom: -10%;
-  font-size: 88%;
-  padding: 0 0 0 20px;
-  box-sizing: inherit;
 }
 
 @media screen and (width >= 900px) {
   .container {
-    float: left;
-    width: 300px;
+    margin: 0;
+    padding: 0 10px 0 0;
 
-    padding: 6px 12px 6px 0;
-  }
-
-  .warn {
-    top: -20%;
+    input {
+      width: 300px;
+    }
   }
 }
