--- a/src/module/auth/common/component/Form/form.scss
+++ b/src/module/auth/common/component/Form/form.scss
@@ -4,17 +4,24 @@
 @lost flexbox flex;
 
 .container {
-  lost-center: 300px;
-  lost-align: middle-center;
-
-  width: 300px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .body {
-  width: 100%;
+  width: 300px;
 }
 
 .content {
   box-sizing: border-box;
   padding: 10px 16px;
 }
+
+@media screen and (width >= 900px) {
+  .body {
+    width: 900px;
+  }
+}
+
