--- a/src/core/base/main.scss
+++ b/src/core/base/main.scss
@@ -7,7 +7,7 @@
 }
 
 html, body {
-  font: 14px Roboto; // stylelint-disable-line
+  font: 14px Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
