--- a/src/common/component/SidebarMenu/component/internal/Mask/mask.scss
+++ b/src/common/component/SidebarMenu/component/internal/Mask/mask.scss
@@ -6,14 +6,16 @@
   height: 100vh;
   outline: none;
   background: rgba(0, 0, 0, .450);
-  // transition: width 120ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  opacity: 0;
+  transition: opacity 120ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
   cursor: pointer;
   z-index: 1;
 }
 
 .active {
   width: 100vw;
-  // transition: width 120ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  opacity: 1;
+  transition: opacity 120ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
 }
 
 @media (max-width: 320px) {
