--- a/src/common/component/SidebarMenu/sidebar-menu.scss
+++ b/src/common/component/SidebarMenu/sidebar-menu.scss
@@ -1,3 +1,5 @@
+@import "common/style/colors.scss";
+
 @use postcss-nested;
 
 .container {
@@ -19,7 +21,7 @@
   overflow: hidden;
   width: 50px;
   height: inherit;
-  background: #daade8;
+  background: var(--color-primary);
   color: white;
   z-index: 2;
   transition: width 150ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
