--- a/src/base/main.css
+++ b/src/base/main.css
@@ -1,5 +1,3 @@
-@import "common/style/colors.css";
-
 @import-normalize;
 
 @use postcss-nested;
@@ -14,7 +12,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   padding: 0;
-  color: var(--color-darkBlue);
+  color: var(--color-dark-blue);
 }
 
 button, textarea, input {
