Finish login page.

--- a/src/page/Auth/Login/login.css
+++ b/src/page/Auth/Login/login.css
@@ -7,7 +7,15 @@
 }
 
 .box {
+  display: flex;
+  flex-direction: column;
   width: 280px;
+}
+
+.fields {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .field {
@@ -20,12 +28,24 @@
   justify-content: center;
 }
 
-/* .links {} */
+.links {
+  display: flex;
+  flex-direction: column;
+}
+
+.link {
+  justify-content: center;
+  display: flex;
+  margin-top: 8px;
+}
 
 @media screen and (width > 1000px) {
   .box {
-    display: flex;
-    width: 900px;
+    width: 486px;
+    justify-content: center;
+  }
+
+  .fields {
     flex-direction: row;
     justify-content: center;
   }
@@ -33,5 +53,16 @@
   .field {
     margin-right: 16px;
     margin-bottom: initial;
+  }
+
+  .links {
+    margin: 8px 0;
+  }
+
+  .link {
+    width: 180px;
+    margin-right: 16px;
+    margin-top: 0;
+    justify-content: initial;
   }
 }
