--- a/src/lib/component/Error/NotFoundError/not-found-error.css
+++ b/src/lib/component/Error/NotFoundError/not-found-error.css
@@ -1,19 +1,17 @@
 @use postcss-nested;
 
-@lost flexbox flex;
-
 .container {
-  lost-center: 300px;
-  lost-align: middle-center;
-
-  width: 300px;
+  display: flex;
+  width: 100%;
   height: 100%;
   text-align: center;
   box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
 }
 
 .content {
-  width: 100%;
+  width: 300px;
 }
 
 .image {
