--- a/src/base/main.css
+++ b/src/base/main.css
@@ -10,7 +10,7 @@ html, body {
   font: 400 14px Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--color-dark-blue);
+  color: var(--color-text);
   margin: 0;
   padding: 0;
 }
@@ -25,7 +25,7 @@ button, textarea, input {
 
 a {
   &, &:hover, &:visited &:active {
-    color: #653089;
+    color: var(--color-interactive);
     text-decoration: none;
   }
 }
