--- a/src/lib/component/DarkMode/colors.css
+++ b/src/lib/component/DarkMode/colors.css
@@ -1,11 +1,14 @@
 .light {
   --color-primary: #a76ebf;
-  --color-dark-blue: #161f4a;
+  --color-text: #161f4a;
+  --color-interactive: #653089;
 }
 
+/* TODO: Add color for dark mode */
 .dark {
   --color-primary: #a76ebf;
-  --color-dark-blue: #161f4a;
+  --color-text: #161f4a;
+  --color-interactive: #653089;
 }
 
 /**
