Add standard spacings.

--- a/src/page/Auth/Confirm/confirm.css
+++ b/src/page/Auth/Confirm/confirm.css
@@ -12,7 +12,7 @@
   border: 1px green solid;
   border-left: none;
   border-right: none;
-  padding: 24px;
+  padding: var(--spacing-m);
 }
 
 .failed {
