--- a/src/common/component/Button/Primary/primary.css
+++ b/src/common/component/Button/Primary/primary.css
@@ -1,4 +1,5 @@
 .container {
-  background: var(--color-primary);
   color: white;
+  background: var(--color-primary);
+  border-color: var(--color-primary);
 }
