--- a/src/common/component/Input/input.css
+++ b/src/common/component/Input/input.css
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   border: 1px solid #ebecf0;
-  padding: 16px;
+  padding: var(--spacing-s);
   transition: border-color 190ms linear;
 
   &:focus {
