--- a/src/common/component/SidebarMenu/sidebar-menu.css
+++ b/src/common/component/SidebarMenu/sidebar-menu.css
@@ -1,5 +1,5 @@
 .container {
-  width: 50px;
+  width: 48px; /** TODO: Update with **/
   height: 100vh;
   color: white;
   background: var(--color-primary);
