Improve sidebar menu.

--- a/src/component/Link/link.css
+++ b/src/component/Link/link.css
@@ -1,7 +1,14 @@
+@use postcss-nested;
+
 .primary {
-  color: var(--color-interactive);
+
+  &, &:hover {
+    color: var(--color-interactive);
+  }
 }
 
 .secondary {
-  color: white;
+  &, &:hover {
+    color: white;
+  }
 }
