--- a/src/component/SidebarMenu/sidebar-menu.css
+++ b/src/component/SidebarMenu/sidebar-menu.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   background: transparent;
-  color: inherit;
+  color: white;
   border: none;
   cursor: pointer;
 }
