--- a/src/lib/component/DarkMode/colors.css
+++ b/src/lib/component/DarkMode/colors.css
@@ -2,6 +2,7 @@
   --color-primary: #a76ebf;
   --color-text: #161f4a;
   --color-interactive: #653089;
+  --color-gray: #ebecf0;
 }
 
 /* TODO: Add color for dark mode */
