Add error hanlder on application level.

--- a/src/lib/component/Error/ApplicationError/application-error.css
+++ b/src/lib/component/Error/ApplicationError/application-error.css
@@ -1,14 +1,8 @@
-@lost flexbox flex;
-
 .container {
-  lost-center: 400px;
-  lost-align: middle-center;
-
-  width: 400px;
+  width: 100%;
+  display: flex;
   text-align: center;
   box-sizing: border-box;
-}
-
-.stack {
-  text-align: left;
+  align-items: center;
+  justify-content: center;
 }
